@@ -2,6 +2,7 @@
 .libs
 Makefile
 Makefile.in
+*.exe
 *.la
 *.lo
 *.o
